# MF-Design-Practice

./: .gitignore  README.md
2006 - Duffy - Introduction to C++/Chapter 2/Exercise 2.10/source/: CMakeLists.txt  TestSums.cpp
2006 - Duffy - Introduction to C++/Chapter 2/Exercise 2.10/source/include/: Sums.hpp
2006 - Duffy - Introduction to C++/Chapter 2/Exercise 2.10/source/src/: Sums.cpp
2006 - Duffy - Introduction to C++/Chapter 2/Problem 1/: CMakeLists.txt  Inequalities.cpp  README.md  README.txt  TestInequalities.cpp
2006 - Duffy - Introduction to C++/Chapter 2/Problem 1/source/: CMakeLists.txt  TestInequalities.cpp
2006 - Duffy - Introduction to C++/Chapter 2/Problem 1/source/include/: Inequalities.hpp
2006 - Duffy - Introduction to C++/Chapter 2/Problem 1/source/src/: Inequalities.cpp
2006 - Duffy - Introduction to C++/Chapter 2/Problem 2/source/: CMakeLists.txt  TestPerson.cpp
2006 - Duffy - Introduction to C++/Chapter 2/Problem 2/source/include/: Person.hpp
2006 - Duffy - Introduction to C++/Chapter 2/Problem 2/source/src/: Person.cpp
2006 - Duffy - Introduction to C++/Chapter 2/Problem 3/source/: CMakeLists.txt  TestGenericInequalities.cpp
2006 - Duffy - Introduction to C++/Chapter 2/Problem 3/source/include/: GenericInequalities.hpp
2006 - Duffy - Introduction to C++/Chapter 2/Problem 3/source/src/: GenericInequalities.cpp
2006 - Duffy - Introduction to C++/Chapter 2/Problem 4/source/: CMakeLists.txt  TestGetString.cpp  main.txt
2006 - Duffy - Introduction to C++/Chapter 2/Problem 4/source/include/: GetString.hpp
2006 - Duffy - Introduction to C++/Chapter 2/Problem 4/source/src/: GetString.cpp
2006 - Duffy - Introduction to C++/Chapter 3/Problem 1/source/: CMakeLists.txt  TestEuropeanOption.cpp
2006 - Duffy - Introduction to C++/Chapter 3/Problem 1/source/include/: EuropeanOption.hpp  MathFunctions.hpp
2006 - Duffy - Introduction to C++/Chapter 3/Problem 1/source/src/: CallPutPriceDelta.cpp  ConstructorsDestructors.cpp  MathFunctions.cpp  PriceDeltaToggle.cpp
2006 - Duffy - Introduction to C++/Chapter 3/Problem 2/source/: CMakeLists.txt  TestSimpleBondPricing.cpp
2006 - Duffy - Introduction to C++/Chapter 3/Problem 2/source/include/: SimpleBondPricing.hpp
2006 - Duffy - Introduction to C++/Chapter 3/Problem 2/source/src/: SimpleBondPricing.cpp
2006 - Duffy - Introduction to C++/Chapter 4/Exercise 4.10/Problem 3/source/: CMakeLists.txt  TestLineSegment.cpp
2006 - Duffy - Introduction to C++/Chapter 4/Problem 3/source/: CMakeLists.txt  TestPoint.cpp
2006 - Duffy - Introduction to C++/Chapter 4/Problem 3/source/include/: Points.hpp
2006 - Duffy - Introduction to C++/Chapter 4/Problem 3/source/src/: Points.cpp
2006 - Duffy - Introduction to C++/Chapter 5/Problem 1/source/: CMakeLists.txt  TestOperatorOverload.cpp
2006 - Duffy - Introduction to C++/Chapter 5/Problem 1/source/include/: datasimdate.hpp
2006 - Duffy - Introduction to C++/Chapter 5/Problem 1/source/src/: datasimdate.cpp
2006 - Duffy - Introduction to C++/Chapter 5/Problem 3/source/: CMakeLists.txt  TestComplex.cpp
2006 - Duffy - Introduction to C++/Chapter 5/Problem 3/source/include/: Complex.hpp
2006 - Duffy - Introduction to C++/Chapter 5/Problem 3/source/src/: Complex.cpp
2012 - Capinski - NMF/C Library/: CMakeLists.txt
2012 - Capinski - NMF/C Library/include/: BinModel.hpp  Options.hpp  Options03.hpp  Payoff.hpp
2012 - Capinski - NMF/C Library/src/: BinModel.cpp  Options.cpp  Options03.cpp
2012 - Capinski - NMF/Chapter 0 - Generic/source/: CMakeLists.txt
2012 - Capinski - NMF/Chapter 1 - Binomial Pricer/Part 11 - BinModel01 Pointers/source/: CMakeLists.txt  TestBinModel.cpp
2012 - Capinski - NMF/Chapter 1 - Binomial Pricer/Part 11 - BinModel01 Pointers/source/include/: BinModel01.hpp
2012 - Capinski - NMF/Chapter 1 - Binomial Pricer/Part 11 - BinModel01 Pointers/source/src/: BinModel01.cpp
2012 - Capinski - NMF/Chapter 1 - Binomial Pricer/Part 12 - Function pointer/source/: CMakeLists.txt  Main07.cpp
2012 - Capinski - NMF/Chapter 1 - Binomial Pricer/Part 12 - Function pointer/source/include/: BinModel01.hpp  Options03.hpp  Payoff.hpp
2012 - Capinski - NMF/Chapter 1 - Binomial Pricer/Part 12 - Function pointer/source/src/: Options03.cpp  Payoff.cpp
2012 - Capinski - NMF/Chapter 1 - Binomial Pricer/Part 4/source/: CMakeLists.txt  TestBinModel.cpp
2012 - Capinski - NMF/Chapter 1 - Binomial Pricer/Part 4/source/include/: BinModel01.hpp
2012 - Capinski - NMF/Chapter 1 - Binomial Pricer/Part 7/source/: CMakeLists.txt
2012 - Capinski - NMF/Chapter 1 - Binomial Pricer/Part 7/source/src/: Options01.cpp
2012 - Capinski - NMF/Chapter 1 - Binomial Pricer/Part 9 - Pointers/source/: CMakeLists.txt  Options02Test.cpp
2012 - Capinski - NMF/Chapter 1 - Binomial Pricer/Part 9 - Pointers/source/include/: BinModel01.hpp  Options02.hpp
2012 - Capinski - NMF/Chapter 1 - Binomial Pricer/Part 9 - Pointers/source/src/: BinModel01.cpp  Options02.cpp
2012 - Capinski - NMF/Chapter 2 - Binomial Pricer II/Part 1 - Binomial class/source/: CMakeLists.txt  Main08.cpp
2012 - Capinski - NMF/Chapter 2 - Binomial Pricer II/Part 1 - Binomial class/source/include/: BinModel02.hpp  Options04.hpp
2012 - Capinski - NMF/Chapter 2 - Binomial Pricer II/Part 1 - Binomial class/source/src/: Options04.cpp
2012 - Capinski - NMF/Chapter 2 - Binomial Pricer II/Part 2 - Options class inheritance/source/: CMakeLists.txt  Main09.cpp
2012 - Capinski - NMF/Chapter 2 - Binomial Pricer II/Part 2 - Options class inheritance/source/include/: BinModel02.hpp  Options05.hpp
2012 - Capinski - NMF/Chapter 2 - Binomial Pricer II/Part 2 - Options class inheritance/source/src/: BinModel02.cpp  Options05.cpp
2012 - Capinski - NMF/Chapter 2 - Binomial Pricer II/Part 3 - Trapezium rule/source/: CMakeLists.txt  Main091.cpp
2012 - Capinski - NMF/Chapter 2 - Binomial Pricer II/Part 3 - Trapezium rule/source/include/: integral.hpp
2012 - Capinski - NMF/Chapter 2 - Binomial Pricer II/Part 4 - Virtual Functions/source/: CMakeLists.txt  Main10.cpp
Notes/: Books.md  Lessons.md
(+62 files in other folders)
